<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">贸大远程</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">登录</string>
    <string name="outlogin">退出登录</string>
    <string name="course_str">课程</string>
    <string name="study_str">学习</string>
    <string name="download_str">下载</string>
    <string name="my_str">我的</string>
    <string name="gostudy_str">去学习</string>
    <string name="seemore_str">查看更多</string>
    <string name="hidemore_str">收起</string>
    <string name="zaixuekecheng_str">在学课程</string>
    <string name="wanjiekecheng_str">完结课程</string>
    <string name="myshoucang_str">我的收藏</string>
    <string name="xiaoxizhongxin_str">消息中心</string>
    <string name="kaoshiyuyue_str">考试预约</string>
    <string name="kaoshichaxun_str">考试查询</string>
    <string name="mychengji_str">我的成绩</string>
    <string name="setting_str">设置</string>
    <string name="tuisonggerenxx_str">推送个人消息 </string>
    <string name="wifixiazaishiping_str">仅wifi环境下载视频</string>
    <string name="sezhiwifixiazaishiping_str">您设置了只在wifi下才能下载视频，此时为移动数据网络，不可下载。您可以通过我的设置去修改设置</string>
    
    <string name="qingchuapphuancun_str">清除应用缓存 </string>
    <string name="geiwopingfen_str">给我评分 </string>
    <string name="about_str">关于我们 </string>
    <string name="wexiaoxi_str">我的消息 </string>
    <string name="tongzhigonggao_str">通知公告</string>
    <string name="gerenxinxin_str">个人信息</string>
	<string name="quanbuxiazai_str">全部下载</string>
    <string name="downloading_str">正在下载</string>
    <string name="downedmore_str">下载更多视频</string>
    <string name="kaishidati_str">开始答题</string>
    <string name="yixiazai_str">已下载</string>
    <string name="ke_str">课</string>
    <string name="edit_str">编辑</string>
    <string name="wancheng_str">完成</string>
    <string name="zhanghaobeisuoding_str">该账号被锁定，请四小时后再登录</string>
    <string name="AboutMe_str">关于我们</string>
</resources>