<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:td="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/course_fragment_bg"
    android:orientation="vertical" >

    <com.td.tradedistance.app.widget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        td:titleBarLeftImage="@drawable/return_top"
        td:titleBarTitle="@string/xiaoxizhongxin_str" />

    <LinearLayout
        android:id="@+id/lly"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white" >

        <RelativeLayout
            android:id="@+id/wodexiaoxi_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/wdxxcolor_tv"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/tv_tab_selected" />

            <TextView
                android:id="@+id/wdxx_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/wexiaoxi_str"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tzgg_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/tab_grey" >

            <TextView
                android:id="@+id/tzgg_color_tv"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/tv_tab_selected" />

            <TextView
                android:id="@+id/tzgg_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tongzhigonggao_str"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/content_xxzxid"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>